tests/ui/namespace/namespaced-enum-glob-import-no-impls-xcrate.stderr
error[E0425]: cannot find function `foo` in module `m`
  --> $DIR/namespaced-enum-glob-import-no-impls-xcrate.rs:12:8
   |
LL |     m::foo();
   |        ^^^ not found in `m`

error[E0425]: cannot find function `bar` in module `m`
  --> $DIR/namespaced-enum-glob-import-no-impls-xcrate.rs:14:8
   |
LL |     m::bar();
   |        ^^^ not found in `m`

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/namespaced-enum-glob-import-no-impls-xcrate.rs:11:5
   |
LL |     foo();
   |     ^^^ not found in this scope

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/namespaced-enum-glob-import-no-impls-xcrate.rs:13:5
   |
LL |     bar();
   |     ^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
